--- a/exp_must_azure_test/views/uploadFileRh.handlebars
+++ b/exp_must_azure_test/views/uploadFileRh.handlebars
@@ -1,16 +1,26 @@
 <h1>postuler</h1>
 <form action="/uploadFile/create" method="post" enctype='multipart/form-data'>
-	<label for='titre'>titre</label>
-	<input type='text' id='titre' name='titre' required />
-    </br>
-    <label for='description'>description</label>
-	<input type='text' id='description' name='description' required />
-    </br>
-    <label for='tag'>tag</label>
-	<input type='text' id='tag' name='tag' required value='administratif'/>
-    </br>
-    <label for='document'>Document</label>
-    <input name='document' type='file' id='document' />
-    </br>
+<div class="m-8">
+
+
+     <div class="relative z-0 mb-6 w-full group">
+        <input type="text" name="titre" id="titre" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+        <label for="titre" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">texte</label>
+    </div>
+     <div class="relative z-0 mb-6 w-full group">
+        <input type="text" name="description" id="description" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder="" required />
+        <label for="description" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">description</label>
+    </div>
+	 <div class="relative z-0 mb-6 w-full group">
+        <input type="text" name="tag" id="tag" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder="" required />
+        <label for="tag" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">tag</label>
+    </div>
+    <div>
+        <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300" for="document">Document</label>
+        <input class="block w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" name="document" id="document" type="file">
+
+    </div>
+
 	<input type='submit' value='importer' />
+    </div>
 </form>
