--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -1,187 +1,80 @@
-<div class='relative top-6 flex justify-center'>
-	<div
-		class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6'
-	>
-		<div class='flex flex-col justify-center items-center'>
-			<h5 class='mb-3 text-base font-semibold text-white lg:text-xl'>
-				Liste des fiches de poste
-			</h5>
-			<div class='flex flex-row'>
-				<p class='ml-5'>En attente de validation</p>
-				<div class='ml-3 flex-shrink-0'>
-					<svg
-						xmlns='http://www.w3.org/2000/svg'
-						class='h-5 w-5 fill-grey-500'
-						viewBox='0 0 20 20'
-						fill='currentColor'
-					>
-						<path
-							fill-rule='evenodd'
-							d='M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z'
-							clip-rule='evenodd'
-						></path>
-					</svg>
-				</div>
-				<p class='ml-5'>Validé</p>
-				<div class='ml-3 flex-shrink-0'>
-					<svg
-						xmlns='http://www.w3.org/2000/svg'
-						class='w-5 h-5 fill-lime-500'
-						viewBox='0 0 20 20'
-						fill='currentColor'
-					>
-						<path
-							fill-rule='evenodd'
-							d='M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z'
-							clip-rule='evenodd'
-						></path>
-					</svg>
-				</div>
-				<p class='ml-5'>Refusé</p>
-				<div class='ml-3 flex-shrink-0'>
-					<svg
-						xmlns='http://www.w3.org/2000/svg'
-						class='h-5 w-5 fill-red-500'
-						viewBox='0 0 20 20'
-						fill='currentColor'
-					>
-						<path
-							fill-rule='evenodd'
-							d='M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z'
-							clip-rule='evenodd'
-						></path>
-					</svg>
-				</div>
-			</div>
-		</div>
+<div class="relative top-6 flex justify-center">
+<div class="grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6">
+    <div class="flex flex-col justify-center items-center">
+        <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
+            Liste des fiches de poste
+        </h5>
+        <div class="flex flex-row">
+            <p class="ml-5">En attente de validation</p>
+            <div class="ml-3 flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-grey-500" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>
+            </div>
+            <p class="ml-5">Validé</p>
+            <div class="ml-3 flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-lime-500" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg>
+            </div>
+            <p class="ml-5">Refusé</p>
+            <div class="ml-3 flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-red-500" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                </svg>
+            </div>
+        </div>
+    </div>
 
-		<ul class='my-4 space-y-3'>
-			{{#each fichePosteList}}
-				<li>
-					<a
-						href={{this.readLink}}
-						class='flex items-center p-3 text-base font-bold text-white bg-gray-600 rounded-lg hover:bg-gray-500 group hover:shadow'
-					>
-						{{#if this.even}}
-							<svg
-								xmlns='http://www.w3.org/2000/svg'
-								class='h-5 w-5'
-								viewBox='0 0 20 20'
-								fill='currentColor'
-							>
-								<path
-									d='M9 2a1 1 0 000 2h2a1 1 0 100-2H9z'
-								></path>
-								<path
-									fill-rule='evenodd'
-									d='M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z'
-									clip-rule='evenodd'
-								></path>
-							</svg>
-						{{else}}
-							<svg
-								xmlns='http://www.w3.org/2000/svg'
-								class='h-5 w-5'
-								fill='none'
-								viewBox='0 0 24 24'
-								stroke='currentColor'
-								stroke-width='2'
-							>
-								<path
-									stroke-linecap='round'
-									stroke-linejoin='round'
-									d='M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01'
-								></path>
-							</svg>
-						{{/if}}
-						<span
-							class='flex-1 ml-3 whitespace-nowrap'
-						>{{this.label}}</span>
-						<span
-							class='inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-400 bg-gray-700 rounded'
-						>{{this.urgency}}</span>
-						<div
-							class='ml-6 w-20 bg-slate-100 h-3.5 rounded-[3px] flex items-center'
-						>
+<ul class="my-4 space-y-3">
+    {{#each fichePosteList}}
+    <li>
+    <a href={{this.readLink}} class="flex items-center p-3 text-base font-bold text-gray-900 bg-gray-50 rounded-lg hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white">
+        {{#if this.even}}
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z" />
+                <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
+            </svg>
+        {{else}}
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+            </svg>
+        {{/if}}
+        <span class="flex-1 ml-3 whitespace-nowrap">{{this.label}}</span>
+        <span class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">{{this.urgency}}</span>
+        <div class="ml-6  h-6 rounded-[3px] flex items-center gap-4">
 
-							{{#compare this.validationRH 0 operator='=='}}
-								<div
-									class='bg-grey-400 h-2 rounded'
-									style='width: 33%'
-								></div>
-							{{else}}{{#compare
-									this.validationRH
-									1
-									operator='=='
-								}}
-									<div
-										class='bg-green-400 h-2 rounded'
-										style='width: 33%'
-									></div>
-								{{else}}{{#compare
-										this.validationRH
-										2
-										operator='=='
-									}}
-										<div
-											class='bg-red-400 h-2 rounded'
-											style='width: 33%'
-										></div>
-									{{/compare}}{{/compare}}{{/compare}}
+            {{#compare this.validationRH 0 operator="=="}}
+                <div class="bg-slate-300  rounded p-2" >RH</div>
+            {{else compare this.validationRH 1 operator="=="}}
+                <div class="bg-green-400  rounded p-2" >RH</div>
+            {{else compare this.validationRH 2 operator="=="}}
+                <div class="bg-red-400  rounded p-2" >RH</div>
+            {{/compare}}
 
-							{{#compare this.validationFinance 0 operator='=='}}
-								<div
-									class='bg-grey-400 h-2 rounded'
-									style='width: 33%'
-								></div>
-							{{else}}{{#compare
-									this.validationFinance
-									1
-									operator='=='
-								}}
-									<div
-										class='bg-green-400 h-2 rounded'
-										style='width: 33%'
-									></div>
-								{{else}}{{#compare
-										this.validationFinance
-										2
-										operator='=='
-									}}
-										<div
-											class='bg-red-400 h-2 rounded'
-											style='width: 33%'
-										></div>
-									{{/compare}}{{/compare}}{{/compare}}
+            {{#compare this.validationFinance 0 operator="=="}}
+                <div class="bg-slate-300 p-2 rounded" >FI</div>
+            {{else compare this.validationFinance 1 operator="=="}}
+                <div class="bg-green-400 p-2 rounded" >FI</div>
+            {{else compare this.validationFinance 2 operator="=="}}
+                <div class="bg-red-400 p-2 rounded" >FI</div>
+            {{/compare}}
 
-							{{#compare this.publicationRH 0 operator='=='}}
-								<div
-									class='bg-grey-400 h-2 rounded'
-									style='width: 33%'
-								></div>
-							{{else}}{{#compare
-									this.publicationRH
-									1
-									operator='=='
-								}}
-									<div
-										class='bg-green-400 h-2 rounded'
-										style='width: 33%'
-									></div>
-								{{else}}{{#compare
-										this.publicationRH
-										2
-										operator='=='
-									}}
-										<div
-											class='bg-red-400 h-2 rounded'
-											style='width: 33%'
-										></div>
-									{{/compare}}{{/compare}}{{/compare}}
-						</div>
-					</a>
-				</li>
-			{{/each}}
-		</ul>
-	</div>
-</div>
+            {{#compare this.publicationRH 0 operator="=="}}
+                <div class="bg-slate-300 p-2 rounded" >PU</div>
+            {{else compare this.publicationRH 1 operator="=="}}
+                <div class="bg-green-400 p-2 rounded" >PU</div>
+            {{else compare this.publicationRH 2 operator="=="}}
+                <div class="bg-red-400 p-2 rounded" >PU</div>
+            {{/compare}}
+
+        </div>
+
+
+        <span class=" text-sm text-white rounded-full bg-slate-600 flex items-center justify-center font-mono p-1 ml-3 w-6 h-6">{{this.nbCandidature}}</span>
+        </a>
+        </li>
+        {{/each}}
+    </ul>
+    </div>
+    </div>
