--- a/exp_must_azure_test/views/organigramme.handlebars
+++ b/exp_must_azure_test/views/organigramme.handlebars
@@ -1,6 +1,5 @@
-<div
-	class='max-w-sm bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'
->
+<div class='flex flex-col items-center pb-10'>
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-white'
@@ -11,9 +10,7 @@
 	</div>
 </div>
 
-<div
-	class='max-w-sm bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'
->
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
 			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
@@ -24,17 +21,36 @@
 	</div>
 </div>
 
-<div
-	class='max-w-sm bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'
->
+<div class='w-full flex justify-center items-center'> 
+{{#each coworker}}
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
 		<h5
+			class='mb-1 text-xl font-medium text-gray-900 dark:text-white'
+		>{{displayName}}</h5>
+		<span class='text-sm text-gray-400'>{jobTitle}}</span>
+		<span class='text-sm text-gray-400'>{mail}}</span>
+		<span class='text-sm text-gray-400'>{{businessPhones}}</span>
+	</div>
+</div>
+{{/each}}	
+</div>
+
+<div class='w-full flex justify-center items-center'> 
+{{#each directReports}}
+<div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
+	<div class='flex flex-col items-center justify-center pb-10'>
+		<h5
 			class='mb-1 text-xl font-medium text-white'
-		>{{directReports.displayName}}</h5>
-		<span class='text-sm text-gray-400'>{{directReports.jobTitle}}</span>
-		<span class='text-sm text-gray-400'>{{directReports.mail}}</span>
+		>{{displayName}}</h5>
+		<span class='text-sm text-gray-400'>{{jobTitle}}</span>
+		<span class='text-sm text-gray-400'>{{mail}}</span>
 		<span
 			class='text-sm text-gray-400'
-		>{{directReports.businessPhones}}</span>
+		>{{businessPhones}}</span>
 	</div>
+</div>
+{{/each}}	
+</div>	
+
 </div>
