--- a/exp_must_azure_test/views/components/navbar.handlebars
+++ b/exp_must_azure_test/views/components/navbar.handlebars
@@ -25,14 +25,17 @@
               Dashboard
             </a>
           </li>
+          <li>
+            <a href="/auth/signout" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
+              Deconnexion
+            </a>
+          </li>
         {{else}}
           <li>
-            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Sign In</a>
+            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Connexion</a>
           </li>   
         {{/if}}
       </ul>
     </div>
-
-    
   </div>
 </nav>
